reworking of alarms display to look and feel better

--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -6,7 +6,7 @@
         <md-content md-theme-watch="true">
             <form name="form" layout="column" layout-align="center center" layout-padding md-theme="blue">
                 <md-input-container required class="long-input" focus flex ><label md-no-float>Username</label><input class="no-float" ng-model="vm.credentials.username"></md-input-container>
-                <md-input-container required class="long-input" focus flex ><label>Password</label><input type="password" ng-model="vm.credentials.password"></md-input-container>
+                <md-input-container required class="long-input" flex ><label>Password</label><input type="password" ng-model="vm.credentials.password"></md-input-container>
                 <md-button aria-label="Login" style="margin: 8px;" ng-click="vm.login(vm.credentials)" class="md-raised md-primary">Login</md-button>
             </form>
         </md-content>
