--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -50,7 +50,7 @@
         <div flex class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
             <div
                 ng-repeat="item in filteredAlarms = ($root.alarmsData | alarmsFilter:vm.showClearedAlarms | regexSearch:vm.alarmsOrderByFields:vm.q | orderBy:vm.alarmsOrderBy.value:vm.alarmsOrderBy.reverse)"
-                class="animate-repeat">
+                class="animate-repeat-opacity">
                 <div ng-click="item.selected = !item.selected" class="alarm-row-item"
 
                      ng-switch="item.severity" layout="row" layout-align="start center"
@@ -109,7 +109,7 @@
         <md-toolbar class="md-whiteframe-z1" ng-mouseenter="showKnownAlarmTools = true;" ng-mouseleave="showKnownAlarmTools = false;">
             <div class="md-toolbar-tools" layout="row">
                <span flex ng-init="vm.selectAllKnownAlarms = false" ng-click="vm.toggleSelectAllKnownAlarms()" title="Select All Known Alarms"
-                                    class="unselectable" style="margin-left: 16px; font-size:22px; cursor: pointer; font-weight: bold;">
+                     class="unselectable" style="margin-left: 16px; font-size:22px; cursor: pointer; font-weight: bold;">
                         Known Alarms
                </span>
 
@@ -132,44 +132,37 @@
             </div>
 
             <div ng-show="vm.showKnownAlarmsList" flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 1; border: 0;" layout="row" layout-align="start center">
-                <span style="max-width: 30px;min-width: 30px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('severity')">
+                 <span style="width: 26px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('severity')">
                     <span style="padding: 8px"></span>
                     <span class="fa"
-                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'severity' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'severity' && vm.knownAlarmsOrderBy.reverse}"
-                          style="margin-right: 4px;"></span>
+                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'severity' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'severity' && vm.knownAlarmsOrderBy.reverse}"></span>
                 </span>
-                <span style="width: 170px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('timestamp')">
-                    <span style="padding: 8px">Date Changed</span>
+                <span style="width: 168px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('timestamp')">
+                    <span>Date Changed</span>
                     <span class="fa"
-                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'timestamp' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'timestamp' && vm.knownAlarmsOrderBy.reverse}"
-                          style="margin-right: 4px;"></span>
+                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'timestamp' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'timestamp' && vm.knownAlarmsOrderBy.reverse}"></span>
                 </span>
-                <span style="max-width: 130px;min-width: 130px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('priority')">
-                    <span style="padding: 8px">Priority</span>
+                <span style="width: 130px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('priority')">
+                    <span>Priority</span>
                     <span class="fa"
-                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'priority' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'priority' && vm.knownAlarmsOrderBy.reverse}"
-                          style="margin-right: 4px;"></span>
+                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'priority' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'priority' && vm.knownAlarmsOrderBy.reverse}"></span>
                 </span>
-                <span style="max-width: 260px;min-width: 260px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('name')">
-                    <span style="padding: 8px">Name</span>
+                <span style="width: 260px;" class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('name')">
+                    <span>Name</span>
                     <span class="fa"
-                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'name' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'name' && vm.knownAlarmsOrderBy.reverse}"
-                          style="margin-right: 4px;"></span>
+                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'name' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'name' && vm.knownAlarmsOrderBy.reverse}"></span>
                 </span>
-
                 <span flex class="subheader-text" ng-click="vm.setKnownAlarmsOrderBy('value')">
-                    <span style="padding: 8px">Message</span>
+                    <span>Message</span>
                     <span class="fa"
-                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'value' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'value' && vm.knownAlarmsOrderBy.reverse}"
-                          style="margin-right: 4px;"></span>
+                          ng-class="{'fa-caret-up': vm.knownAlarmsOrderBy.value === 'value' && !vm.knownAlarmsOrderBy.reverse, 'fa-caret-down': vm.knownAlarmsOrderBy.value === 'value' && vm.knownAlarmsOrderBy.reverse}"></span>
                 </span>
             </div>
         </md-toolbar>
 
         <div ng-show="vm.showKnownAlarmsList" flex class="alarms-list" ng-click="vm.selectAllKnownAlarms = false">
-            <div
-                ng-repeat="item in filteredKnownAlarms = ($root.alarmsData | alarmsKnownFilter:vm.showKnownNominalAlarms:vm.showKnownMaintenanceAlarms | regexSearch:vm.knownAlarmsOrderByFields:vm.q2 | orderBy:vm.knownAlarmsOrderBy.value:vm.knownAlarmsOrderBy.reverse)"
-                class="animate-repeat">
+            <div ng-repeat="item in filteredKnownAlarms = ($root.alarmsData | alarmsKnownFilter:vm.showKnownNominalAlarms:vm.showKnownMaintenanceAlarms | regexSearch:vm.knownAlarmsOrderByFields:vm.q2 | orderBy:vm.knownAlarmsOrderBy.value:vm.knownAlarmsOrderBy.reverse)"
+                class="animate-repeat-opacity">
                 <div ng-click="item.selected = !item.selected" flex class="alarm-row-item"
                      ng-switch="item.severity" layout="row" layout-align="start center"
                      ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
