renamed some buttons and titles as per lize's email

--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -23,7 +23,7 @@
             <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.observations')">
                 <div layout="column">
                     <div flex style="font-size: 148px" ><span flex class="fa fa-binoculars"></span></div>
-                    <span>Observation Schedules Overview</span></div>
+                    <span>Observation Schedules Schedules</span></div>
             </md-button>
         </div>
     </md-content>
