--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,69 +1,38 @@
-<div flex layout="row" style="min-width: 1015px; min-height: 920px;" ng-controller="SubArrayResourcesCtrl as vm">
+<div flex layout="row" style="min-width: 1050px; min-height: 920px;" ng-controller="SubArrayResourcesCtrl as vm">
 
     <div flex layout="column" style="overflow: auto; padding: 16px;">
         <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2" layout="row" layout-align="start"
-             style="min-width: 650px;" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false"
-             md-theme="{{subarray.state === 'free'? 'green' : subarray.state === 'in_use'? 'amber' : 'deep-purple'}}" flex>
+             style="min-width: 650px;" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false" flex>
 
-            <div layout="column" layout-align="start">
-                <md-toolbar class="md-whiteframe-z1 md-hue-2" layout="column" layout-align="start center" title="{{subarray.description}}">
-                    <!--<div layout="column" style="position: absolute; margin-left: -12px; margin-top: 8px;">-->
-                    <!--<md-button class="md-fab md-primary" md-theme="red"-->
-                    <!--ng-click="vm.removeSubarray(subarray)" aria-label="Remove Subarray">-->
-                    <!--<span class="fa fa-minus"></span>-->
-                    <!--<md-tooltip>Remove Sub-Array</md-tooltip>-->
-                    <!--</md-button>-->
-                    <!--</div>-->
-
-                    <div flex style="width: 100%; text-align: center" ng-class="{'subarray_in_maintenance_bg': subarray.in_maintenance}">
-                        <h2>Sub-Array {{subarray.id}}</h2>
-                    </div>
+            <div layout="column" layout-align="start" flex>
+                <md-toolbar md-theme="{{subarray.state === 'free'? 'green' : subarray.state === 'in_use'? 'amber' : 'deep-purple'}}" class="md-whiteframe-z1 md-hue-2"
+                            layout="row" layout-align="start center" title="{{subarray.description}}" style="max-height: 34px; min-height: 34px;">
+                    <span style="font-size: 16px; margin-left: 8px; cursor: pointer;" ng-click="vm.navigateToSchedulerDetails(subarray.id)">Sub-Array {{subarray.id}}</span>
+                    <md-toolbar ng-click="vm.navigateToSchedulerDetails(subarray.id)" layout="row" layout-align="center center" flex md-theme="{{subarray.in_maintenance ? 'deep-purple' : subarray.state === 'in_use'? 'amber' : 'green'}}" class="md-hue-2"
+                                style="max-height: 34px; min-height: 34px; margin-left: 32px; margin-right: 32px; box-shadow: none; font-size: 16px; cursor: pointer;"
+                                title="State: {{subarray.state}}"><span>{{subarray.state + " "}}</span><span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
+                    </md-toolbar>
+                    <md-button class="fade-in" md-theme="{{themePrimaryButtons}}" style="width: 32px; height: 32px; font-size: 14px; margin-right: 4px;"
+                               ng-show="subarray.state !== 'in_use'"
+                               ng-click="vm.freeSubarray(subarray)" aria-label="Free Subarray">
+                        <span class="fa fa-asterisk"></span>
+                        <md-tooltip>Free Sub-Array</md-tooltip>
+                    </md-button>
+                    <md-button class="" md-theme="{{themePrimaryButtons}}" style="width: 32px; height: 32px; font-size: 14px; margin-right: 4px;"
+                               ng-click="vm.setSubarrayInUse(subarray)" aria-label="Set Subarray In Use"
+                               title="Set Sub-Array In Use">
+                        <span class="fa fa-gear"></span>
+                        <md-tooltip>Set Sub-Array In Use</md-tooltip>
+                    </md-button>
+                    <md-button class="" md-theme="{{themePrimaryButtons}}" style="width: 32px; height: 32px; font-size: 14px; margin-right: 4px;"
+                               ng-click="vm.setSubarrayInMaintenance(subarray)" aria-label="Set Subarray In Maintenance"
+                               title="Set Sub-Array in Maintenance">
+                        <span class="fa fa-wrench"></span>
+                        <md-tooltip>Set Sub-Array in Maintenance</md-tooltip>
+                    </md-button>
                 </md-toolbar>
 
-                <div layout="row" layout-align="start">
-                    <div layout="column">
-                        <md-button class="md-raised md-primary" md-theme="amber" ng-class="{'opaque-fade-in':subarray.mousehover}"
-                                   style="opacity: 0.1; width: 31px; margin-top: 4px" flex
-                                   ng-click="vm.setSubarrayInUse(subarray)" aria-label="Set Subarray In Use"
-                                   title="Set Sub-Array In Use">
-                            <span class="fa fa-gear"></span>
-                        </md-button>
-
-                        <md-button class="md-raised md-primary" md-theme="deep-purple" ng-class="{'opaque-fade-in':subarray.mousehover}"
-                                   style="opacity: 0.1; width: 31px; margin-top: 4px; margin-bottom: 4px" flex
-                                   ng-click="vm.setSubarrayInMaintenance(subarray)" aria-label="Set Subarray In Maintenance"
-                                   title="Set Sub-Array in Maintenance">
-                            <span class="fa fa-wrench"></span>
-                        </md-button>
-                    </div>
-                    <div layout="column" layout-align="center center" style="margin-left: 12px; margin-right: 12px;">
-                        <md-button md-theme="{{themePrimaryButtons}}" class="md-primary md-raised" style="margin-top: 4px"
-                                   layout="column" layout-align="center center" ng-click="vm.navigateToSchedulerDetails(subarray.id)">
-                            <div style="transform:scale(0.7);" ng-include="'images/subarray.svg'"></div>
-                            <span>Manage Observations</span>
-                        </md-button>
-                        <span ng-if="!subarray.in_maintenance" title="State: {{subarray.state}}">{{subarray.state}}</span>
-                        <span ng-if="subarray.in_maintenance" class="maintenance-text" title="State: {{subarray.state}} - in maintenance">{{subarray.state}} - in maintenance</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="" style="margin-left: 0px;" layout="column" layout-align="start" flex>
-
-                <md-toolbar class="md-whiteframe-z1 md-hue-2">
-                    <div layout="row" class="unselectable md-toolbar-tools">
-                        <span flex>Resources Assigned to Sub-array</span>
-                        <md-button class="md-fab md-primary" md-theme="blue" style="opacity: 0.01"
-                                   ng-show="subarray.state !== 'in_use'"
-                                   ng-class="{'opaque-fade-in':subarray.mousehover}"
-                                   ng-click="vm.freeSubarray(subarray)" aria-label="Free Subarray">
-                            <span class="fa fa-asterisk"></span>
-                            <md-tooltip>Free Sub-Array</md-tooltip>
-                        </md-button>
-                    </div>
-
-                </md-toolbar>
-                <div flex style="overflow: auto; border-left: 1px solid #d3d3d3; border-right: 1px solid #d3d3d3">
+                <div flex style="overflow: auto;">
                     <div flex class="resource-item animate-repeat-40" layout="row" layout-align="start center"
                          ng-repeat="resource in vm.poolResources | filter:{sub_nr:subarray.id} | orderBy:'name'">
                         <span class="fa" style="font-size: 18px; margin-right: 4px;" ng-class="{'fa-warning error-text':resource.state === 'faulty'}" title="Resource Marked Faulty"></span>
@@ -87,16 +56,12 @@
                 <span class="fa fa-chevron-left md-fab-fa-icon-small"></span>
             </md-button>
         </div>
-        <!--<md-button class="md-fab md-primary" md-theme="{{themePrimaryButtons}}" style="margin: auto; min-height: 56px;"-->
-        <!--ng-click="vm.createSubarray()" title="Create Sub-Array" aria-label="Create Subarray">-->
-        <!--<span class="fa fa-plus"></span>-->
-        <!--</md-button>-->
     </div>
 
     <div flex layout="column" style="max-width:350px; min-height: 600px; margin-right: 16px; margin-bottom: 16px;">
 
         <div flex layout="column" class="md-whiteframe-z2" style="margin-bottom: 8px;">
-            <md-toolbar class="md-whiteframe-z1" layout="column" layout-align="start center" title="">
+            <md-toolbar class="md-whiteframe-z1" layout="column" layout-align="start center" title="" style="max-height: 40px; min-height: 40px;">
                 <span flex class="md-toolbar-tools">Resources</span>
             </md-toolbar>
 
