--- a/app/health/health.html
+++ b/app/health/health.html
@@ -1,19 +1,24 @@
 <div flex layout="row" layout-align="center start" ng-controller="HealthCtrl as vm" style="min-width: 1100px; overflow: auto; margin-top: 4px;">
-    <div class="md-whiteframe-z3 legend-popup" style="display:inline-block" layout="column" layout-align="center start">
-        <md-button style="margin-right: 8px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = true" ng-click="showLegend = !showLegend"
-                   aria-label="Show Legend">
-            <span ng-if="!showLegend">Show Legend</span>
-            <span ng-if="showLegend">Hide Legend</span>
-        </md-button>
-        <div layout="column" ng-show="showLegend">
+    <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" layout-align="" ng-init="transparentLegend = true"
+         ng-class="{'transparent-legend':transparentLegend && !showLegend}">
+        <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
             <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch nominal-child" title="Green"></div><span>Nominal</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch warn-child" title="Amber"></div><span>Warn</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch error-child" title="Red"></div><span>Error</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch failure-child" title="Brown"></div><span>Failure</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch failure-child" title="Blue"></div><span>Failure</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch unreachable-child" title="Pink"></div><span>Unreachable</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Blue"></div><span>Inactive</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
+        <md-button style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = true" ng-click="showLegend = !showLegend"
+                   ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
+                   aria-label="Show Legend" class="md-primary md-raised">
+            <span ng-if="!showLegend" class="fa fa-eye" title="Show Legend"></span>
+            <span ng-if="showLegend" class="fa fa-eye-slash" title="Hide Legend"></span>
+        </md-button>
     </div>
-    <status-single-level-tree-map flex style="display: inline-block; margin-left: 4px; margin-right:4px;" ng-repeat="tree in vm.topStatusTrees" data="tree"></status-single-level-tree-map>
+    <status-single-level-tree-map flex style="display: inline-block; margin-left: 4px; margin-right:4px;"
+                                  ng-repeat="tree in vm.topStatusTrees" data="tree"></status-single-level-tree-map>
+
+    <div class="treemap-tooltip" style="visibility: hidden; background-color: #ffffff"></div>
 </div>
