schedule block assignments display styling tweaks

--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -14,8 +14,8 @@
             </div>
 
             <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 1;" layout="row" layout-align="center center">
-                <span style="max-width: 165px;min-width: 165px; margin-left: 16px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
-                    <span>ID</span>
+                <span style="max-width: 120px;min-width: 120px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
+                    <span style="padding-left: 8px;">ID</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
                           style="margin-right: 4px;"></span>
