--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,6 +1,6 @@
 <div flex layout="row" style="min-width: 1050px; min-height: 920px; margin-top: 4px;" ng-controller="SubArrayResourcesCtrl as vm">
 
-    <div flex layout="column" style="overflow: auto; padding: 16px;">
+    <div flex layout="column" style="overflow: auto; padding-left: 16px; padding-right: 16px; padding-bottom: 16px;">
         <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2" layout="row" layout-align="start"
              style="min-width: 650px;" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false" flex>
 
@@ -17,12 +17,13 @@
                             <span style="font-size: 10px;" title="Resources Marked as Faulty">Faulty</span>
                         </div>
                     </div>
-                    <md-button ng-click="vm.navigateToSchedulerDetails(subarray.id)" layout="row" layout-align="center center" flex ng-class="{'md-raised md-primary': subarray.in_maintenance}"
+                    <md-button ng-click="vm.navigateToSchedulerDetails(subarray.id)" layout="row" layout-align="center center" ng-class="{'md-raised md-primary': subarray.in_maintenance}"
                                md-theme="{{subarray.in_maintenance ? 'purple' : subarray.state === 'in_use'? 'amber' : 'green'}}" class="md-hue-2 subarray-state-toolbar"
                                title="Click to Manage Observations for Sub-Array {{subarray.id}}">
                         <span>{{subarray.state + " "}}</span>
                         <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                     </md-button>
+                    <span flex></span>
                     <span ng-show="subarray.state === 'in_use'" style="width: 36px;"></span>
                     <md-button md-theme="{{themePrimaryButtons}}" class="fade-in md-fab md-button-fab-small md-primary md-subarray-fab-button"
                                ng-show="subarray.state !== 'in_use'"
