--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -1,6 +1,6 @@
 <md-content ng-controller="SchedulerHomeCtrl as vm" flex layout="column" layout-fill>
     <md-content ng-show="!vm.childStateShowing" layout="column" layout-align="center" md-theme="{{themePrimaryButtons}}" class="md-whiteframe-z4"
-         style="margin-left:auto; margin-right: auto;max-width: 1150px; min-width: 1150px;min-height: 800px;">
+         style="margin-left:auto; margin-right: auto; margin-top: 8px; max-width: 1150px; min-width: 1150px;min-height: 800px;">
         <div layout="row" layout-align="center center">
             <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.drafts')">
                 <div layout="column">
